# lms_project

./: .env.sample  .gitignore  Dockerfile  README.md  coverage_report.txt  docker-compose.yml  mixins.py  pyproject.toml  schema.yaml
.github/workflows/: ci.yml  ci_cd.yml
config/: settings.py  urls.py
lms/: admin.py  models.py  pagination.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_link_video_alter_lesson_title.py  0003_lesson_unique_title_per_course.py  0004_course_owner_lesson_owner.py  0005_alter_lesson_course.py  0006_remove_course_owner_remove_lesson_owner_and_more.py  0007_course_owner_lesson_owner.py  0008_subscription.py  0009_alter_subscription_course_alter_subscription_user.py  0010_coursepayment.py  0011_delete_coursepayment.py  0012_course_last_updated.py  0013_alter_lesson_owner.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: add_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options.py  0004_user_username.py  0005_remove_user_username.py  0006_alter_user_managers.py  0007_payment_created_at_payment_link_payment_session_id_and_more.py  0008_remove_payment_created_at_remove_payment_paid_course_and_more.py  0009_rename_payment_data_payment_payment_date.py  0010_alter_payment_course.py  0011_remove_payment_payment_date.py  0012_alter_payment_payment_method.py  0013_payment_payment_status.py
